# Reading-Ruler

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: local-packaging.yml  macos-distribution.yml
app/: help.css  help.html  index.html  main.js  overlay.css  overlay.html  overlay.js  styles.css
docs/: DEVELOPMENT.md  INSTALLATION.md  MULTI_RULER_IMPLEMENTATION.md  RELATED_FILES.md  STAGE_5_IMPLEMENTATION.md
script/: build_and_run.sh  build_macos_app.sh  check_macos_deps.sh  check_windows_deps.ps1  package_macos_distribution.sh  package_macos_local.sh  package_windows_local.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
